k8s/development/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: genesis-development
  name: genesis-vue
spec:
  selector:
    app: genesis-vue
  ports:
    - protocol: TCP
      port: 8080
